MDEV-7011: MAX_STATEMENT_TIME has no effect in a procedure after a previous successful statement

Do not reset timer inside stored procedures and functions.